# Gladiators_Project2

./: README.md
Imagenes/: Diagram Class
Josue/: txt
Josue/Interfaz/: Proyecto2.pro  Proyecto2.pro.user.21  Proyecto2.pro.user.4.9-pre1  arrow.cpp  arrow.h  arrow2.cpp  arrow3.cpp  client.cpp  client.h  game.cpp  game.cpp.autosave  game.h  json.cpp  json.h  list.h  list_def.h  main.cpp  mainmenu.cpp  mainmenu.h  myplayer.cpp  myplayer.h  mythread.h  node.h  node_def.h  resources.qrc  stadistics.cpp  stadistics.h  tower.cpp  tower.h  tower2.cpp  tower2.h  tower3.cpp
Josue/Logic/Server/: A_  A_.cbp  Army.cpp  CMakeLists.txt  Field.h  Game.cpp  Game.h  GeneticEvolution.cpp  GeneticEvolution.h  Gladiator.cpp  Gladiator.h  JSON.cpp  JSON.h  List.h  List_def.h  Makefile  Pathfinding.cpp  Pathfinding.h  Server.cpp  Server.h  cmake_install.cmake  main.cpp
Josue/Logic/Server/include/rapidjson/: document.h
Josue/Proyecto2/: Proyecto2.pro  button.cpp  client.cpp  client.h  game.cpp  game.h  gamethread.h  main.cpp  mainmenu.cpp  myplayer.cpp  myplayer.h  mythread.cpp  player.h  resources.qrc  tower.cpp  tower.h
Pablo/: txt
Pablo/GeneticA/: Army.cpp  Army.h  CMakeLists.txt  Gladiator.cpp  Gladiator.h  main.cpp
Pablo/Gladiators/: Army.cpp  Army.h  CMakeLists.txt  GeneticEvolution.cpp  GeneticEvolution.h  Gladiator.cpp  Gladiator.h  List.h  List_def.h  Node.h  Node_def.h  main.cpp
Tati/: txt
Tati/A*/: CMakeLists.txt  Field.cpp  Field.h  List.h  List_def.h  Matrix.h  Matrix_def.h  Pathfinding.cpp  Pathfinding.h  Tower.cpp  Tower.h  main.cpp
Tati/Gladiators/: Army.h  (+4 more)
(+146 files in other folders)
