cmake_minimum_required(VERSION 3.13)
project(A_)

set(CMAKE_CXX_STANDARD 14)

add_executable(A_ main.cpp Tower.cpp Tower.h SingleArrow.cpp SingleArrow.h ExplosiveArrow.cpp ExplosiveArrow.h Field.cpp Field.h Pathfinding.cpp Pathfinding.h List.h List_def.h Node.h Node_def.h Matrix.h Matrix_def.h FireArrow.cpp FireArrow.h)